fix: removed useless classes, made huge code cleaning